Remove placeholder text from textarea-log in index.html and add h1 title to page

--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
 <body>
   <div id="terminal-container">
     <div id="terminal-screen">
+      <h1>REOP T3RM1NAL</h1>
       <div id="log-container">
-        <textarea id="textarea-log" readonly>
- ____                    _____                   _             _ 
-|  _ \ ___  ___  _ __   |_   _|__ _ __ _ __ ___ (_)_ __   __ _| |
-| |_) / _ \/ _ \| '_ \    | |/ _ \ '__| '_ ` _ \| | '_ \ / _` | |
-|  _ <  __/ (_) | |_) |   | |  __/ |  | | | | | | | | | | (_| | |
-|_| \_\___|\___/| .__/    |_|\___|_|  |_| |_| |_|_|_| |_|\__,_|_|
-                |_|                                              
-		</textarea>
+        <textarea id="textarea-log" readonly></textarea>
       </div>
       <div id="input-container">
         <p id="cursor">></p>
