Add id attribute to title in index.html and define styles for #title in style.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="terminal-container">
     <div id="terminal-screen">
-      <h1>REOP T3RM1NAL</h1>
+      <h1 id="title">REOP T3RM1NAL</h1>
       <div id="log-container">
         <textarea id="textarea-log" readonly></textarea>
       </div>
